# coil

./: .gitignore  AUTHORS  LICENSE  Makefile.am  Makefile.decl  README  README-dev  README-dev.md  README.md  TODO  acinclude.m4  autogen.sh  coil-valgrind.supp  configure.ac  libcoil-0.1.pc  libcoil-0.1.pc.in
bindings/: Makefile.am
bindings/python/: Makefile.am  coillist.c  coilmodule.c  coilmodule.h  coilstruct.c
bindings/python/tests/: Makefile.am  common.py  test_parser.py  test_struct.py
coil/: .gitignore  Makefile.am  TODO  coil.c  coil.h  coildebug.c  coildump.c  common.h  error.c  error.h  expandable.c  expandable.h  expression.c  expression.h  format.h  include.c  include.h  link.c  link.h  list.c  list.h  marshal.list  object.c  object.h  parser.y  parser_defs.h  path.c  path.h  scanner.l  strings_extra.c  strings_extra.h  struct-private.h  struct.c  struct.h  struct_private.h  struct_table.c  struct_table.h  test.coil  value.c  value.h
misc/: coil-valgrind.supp  coil.vim
python/: .gitignore  .indent.pro  Makefile.am  coillist.c  coillistproxy.c  coilmodule.c  coilmodule.h  coilstruct.c  coilstruct.h  setup.py
python/tests/: Makefile.am  common.py  example.coil  example2.coil  runtests.py  simple.coil  test_listproxy.py  test_parser.py  test_simpleapi.py  test_struct.py
tests/: Makefile.am
tests/benchmark/: benchmark.coil  benchmark.py  benchmark_expression.coil  benchmark_extends.coil  benchmark_extends_compat.coil  benchmark_file.coil  benchmark_links.coil
tests/functional/: .gitignore  Makefile.am  run_functional_tests.c
tests/functional/cases/fail/: general.coil  test_delete_badpath.coil.disabled  test_double_delete.coil  test_expression_cycle.coil  test_extends_badpath.coil  test_extends_badpath2.coil  test_extends_badtype.coil  test_extends_cycle.coil  test_file_import_invalid.coil  test_file_import_noexist.coil  test_file_noexist.coil  test_link_cycle2.coil  test_link_rootpath.coil  test_long_merged_path.coil  test_long_path.coil  test_syntax1.coil  test_syntax2.coil  test_syntax3.coil  test_syntax4.coil  test_syntax5.coil  test_unused_prototypes.coil
tests/functional/cases/pass/: expression.coil  general.coil  test_comments.coil  test_crazy_keys.coil  test_create_containers.coil  test_expand_context.coil.ignore  test_expand_context2.coil  test_expression_escape.coil  test_expression_escape2.coil  test_expression_expand_paths.coil  test_expression_noexist.coil  test_expression_ooo.coil  test_expression_quoting.coil  test_expressions_simple.coil  test_extends.coil  test_extends2.coil  test_extends3.coil  test_extends4.coil  test_extends5.coil  test_extends_chain.coil  test_extends_consistency.coil  test_extends_deleted_keys.coil  test_extends_link.coil  test_file_deleted_keys.coil  test_file_include.coil  test_file_include2.coil  test_file_include_caching.coil  test_file_include_expand_args.coil  test_file_include_expression.coil  test_file_include_from_links.coil  test_file_include_not_struct.coil  test_floats.coil  test_late_extends.coil  test_link_members.coil  test_link_members.coil.ignore  test_link_simple.coil  test_links.coil  test_links2.coil.unused  test_lists.coil  test_long_key.coil  (+9 more)
tests/unit/: generate_suite.awk
